log/build_2023-02-02_13-38-59/py_pubsub/stderr.log
  File "/home/dunto/demo_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 70
    else
       ^
SyntaxError: invalid syntax

